Add steam turbine & refactoring